...
    @IBOutlet weak var headerView: UIView!
    
    fileprivate var delegate: ColorSelectorViewControllerDelegate!
    
    fileprivate var colors: [ColorLabel] = [
                                        ColorLabel(name: "Default", hexColor: "#FFFFFF"),
                                        ColorLabel(name: "Blue", hexColor: "#0369A4"),
                                        ColorLabel(name: "Green", hexColor: "#1BA95E"),
                                        ColorLabel(name: "Yellow", hexColor: "#FFD831"),
                                        ColorLabel(name: "Orange", hexColor: "#FC7D04"),
                                        ColorLabel(name: "Pink", hexColor: "#F08EB1"),
                                        ColorLabel(name: "Red", hexColor: "#E31C3F")]
    
...
