...
                }
                return
            }
            
            //Load it mockly
            var tags: [Tag] = []
            tags.append(Tag(tagId: "\(nextIndex())", name: "Color"))
            tags.append(Tag(tagId: "\(nextIndex())", name: "Noun"))
            tags.append(Tag(tagId: "\(nextIndex())", name: "Verb"))
            tags.append(Tag(tagId: "\(nextIndex())", name: "Adjective"))

            for t in tags {
                dataStore.add(tag: t)
            }
            
//            dataStore.add(wordPair: WordPair(pairId: "\(nextIndex())", word: "rojo", definition: "red", dateCreated: Date()))
//            dataStore.add(wordPair: WordPair(pairId: "\(nextIndex())", word: "mujer", definition: "woman", dateCreated: Date()))
//            dataStore.add(wordPair: WordPair(pairId: "\(nextIndex())", word: "to run", definition: "correr", dateCreated: Date()))
//            dataStore.add(wordPair: WordPair(pairId: "\(nextIndex())", word: "fuerte", definition: "strong", dateCreated: Date()))
            
            createWordPair(word: "rojo", definition: "red", tags: [tags[0]], gender: .notset, example: nil, callback: { (_ : WordPair?, _:EnfocaError?) in
                //nothing
            })
            
...
