...
                                            <outlet property="tagColorView" destination="vSF-HQ-uYC" id="CCA-Ug-qst"/>
                                            <outlet property="titleLabel" destination="k8I-1u-kWm" id="eub-To-X2z"/>
                                        </connections>
                                    </collectionViewCell>
                                </cells>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="Tag Selection Collection View"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="Yij-YD-eB6" id="68T-pK-vnN"/>
                                    <outlet property="delegate" destination="Yij-YD-eB6" id="Nm4-AV-ow1"/>
                                </connections>
                            </collectionView>
...
