...
    
    private class func makeTags() -> [Tag] {
        var tags: [Tag] = []
        tags.append(Tag(tagId: "123", name: "Noun"))
        tags.append(Tag(tagId: "124", name: "Verb"))
        tags.append(Tag(tagId: "125", name: "Phrase"))
        tags.append(Tag(tagId: "126", name: "Adverb"))
        tags.append(Tag(tagId: "127", name: "From Class #3"))
        return tags
    }
    
    func createWordPair(word: String, definition: String, tags : [Tag], gender : Gender, example: String? = nil, callback : @escaping(WordPair?, EnfocaError?)->()) {
        
...
