...
    }
    
    func presentFatalAlert(title : String, message : String?){
        
        let alertController = UIAlertController(title: title, message:
            message, preferredStyle: UIAlertControllerStyle.alert)
        alertController.addAction(UIAlertAction(title: "Close", style: UIAlertActionStyle.default,handler: { _ -> (Void) in
            abort()
        }))
        
        self.present(alertController, animated: true, completion: nil)
    }
    
...
